--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img class="Lado" src="imagens/curso-em-video-pb.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis fugiat doloribus illum ea error? Itaque necessitatibus tempora praesentium quas consequatur iste iure? Consequatur dignissimos unde asperiores ipsum saepe ducimus suscipit?</p>
+            <p>Acesse o curso de HTML5</p>
         </article>
         <article>
             <h2>Curso de JavaScrip</h2>
+            <img class="Lado" src="imagens/curso-javascript.png" alt="Curso JavaScrip">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut fugit earum ipsa laborum voluptatem optio neque? Aliquam laudantium labore, vel consequatur eaque laborum, magni laboriosam, enim possimus cum temporibus nostrum.</p>
+            <p>Acesse o curso de JavaScrip</p>
         </article>
     </main>
     
